JG-2002-06-07-0: Cleanup:   Replaced %s in messages with macros SFN and SFQ
                            for all libs. Fixed problems with multiply defined
                            messages.
                 Issue:     #252           

JG-2002-06-06-0: Bugfix:    Building Grid Engine with shared libs was broken.

AH-2002-06-05-1: Bugfix:    Fix problem with notify mechanism causing actual
                            termination/suspension signal being delayed endlessly
                 Issue:     #231
                 Bugtraq:   #4697491

JG-2002-06-05-3: Cleanup:   Replaced %s in messages with macros SFN and SFQ
                            for utilib.
                 Issue:     #252           

JG-2002-06-05-2: Bugfix:    qsub allowed submission of binary files
                 Issue:     #247
                 Bugtraq:   #4696768

JG-2002-06-05-1: Bugfix:    Error handling when reading configuration at 
                            qmaster startup was incomplete and produced 
                            confusing error messages.
                 Issue:     #226
                 Bugtraq:   #4665780

JG-2002-06-05-0: Bugfix:    Load values on HP-UX 11 multiprocessor machines 
                            were incorrect.
                 Issue:     #246

SD-2002-06-03-0: Bugfix:    Fixed GRD 5.1.9 to SGEEE 5.3 upgrade
                 Issue:     #273

JG-2002-05-31-1: Doc:       Improved howto for qrsh with ssh.

JG-2002-05-31-0: Enhancem.: rshd: new switch -i: ignore /etc/nologin
                 Issue:     #272

AH-2002-05-29-1: Bugfix:    Fix bug allowing non-privileged users to submit jobs
                            with priority higher than 0
                 Issue:     #271
                 Bugtraq:   #4692957

CR-2002-05-29-2: Bugfix:    - uninitialized function pointer compiler warning

JG-2002-05-29-2: Enhancem.: Allow specification of arguments to 
                            [rsh|rlogin|qlogin]_[daemon|command]
                 Issue:     #232           